# topological-ml-toolkit

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
backends/: README.md
backends/asm/: x86_64_dispatch.S  x86_64_l2_f32.S
backends/compatibility/: index.html
backends/cpp/: topoml_native.cpp
backends/cuda/: topology_distance.cu  warp_reductions.cu
backends/language-mix/: index.html
backends/roadmap/: index.html
backends/triton/: topology_distance.py
benchmarks/: README.md  benchmark_asm_distance.py  benchmark_cuda_tensors.py  benchmark_ml_adapters.py  benchmark_native_distance.py  benchmark_persistence_similarity.py  benchmark_python.py  benchmark_tda_baselines.py  benchmark_triton_schedule.py  e2e_claims.py  index.html
benchmarks/datasets/: index.html
benchmarks/e2e-claims/: index.html
concepts/manifold-embeddings/: index.html
concepts/performance-gates/: index.html
concepts/persistent-homology/: index.html
concepts/ph-feature-vectors/: index.html
concepts/topological-training/: index.html
concepts/topology-landscape/: index.html
crates/topoml-core/: Cargo.toml
crates/topoml-core/src/: lib.rs
crates/topoml-core/tests/: backend_contract.rs  persistence_contract.rs
docs/: index.md
examples/: dashboard_export.py  point_cloud_ph.py  sklearn_pipeline.py
gallery/: index.html
scripts/: generate_gallery.py
search/: search_index.json
tutorials/: index.html
(+97 files in other folders)
